[package]
name = "tetroxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris = { path = "../tetris" }
spin_sleep = "1.1.1"
clap = { version = "4.2.1", features = ["derive"] }
crossterm = "0.26.1"

[dependencies.tui]
version = "0.19.0"
default-features = false
features = ["crossterm"]

[dependencies.tui-input]
version = "0.7.0"
