[package]
name = "tetroxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetris = { path = "../tetris" }
spin_sleep = "1.1.1"
clap = { version = "4.2.1", features = ["derive"] }
crossterm = {version = "0.26.1", features = [ "serde" ]}
futures = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
thiserror = "1.0"

[dependencies.async-std]
version = "1.7.0"

[dependencies.tui]
version = "0.19.0"
default-features = false
features = ["crossterm", 'serde']

[dependencies.tui-input]
version = "0.7.0"
